[1782] Improve capella generation
Bug: 1782

Change-Id: Ie98ac19ae0d92a764b9a64c5421ac98840ea470c
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>