@@ -411,20 +411,20 @@ This file was generated by Eclipse EGF
 	
 	<target name="all" depends="CleanStep_1,TP_mars,TP_build,releng,PublishStep_5,releng_feature,product,PublishStep_8,product_feature,extension_sdk,PublishStep_11,extension_sdk_feature,vpdsl,PublishStep_14,vpdsl_feature,AntStep_16,all_studio_features,TP_win32-win32-x86_64,TP_linux-gtk-x86_64,TP_macosx-cocoa-x86_64,AntStep_21" />
 	<target name="TP_mars" depends="TP_mars_build_studio_platform" />
-	<target name="TP_mars_build_studio_platform" depends="TP_mars_build_studio_platform_setup_kitalpha_runtime_platform,TP_mars_build_studio_platform_install_query_legacy_features,TP_mars_build_studio_platform_install_kitalpha_features,TP_mars_build_studio_platform_install_capella_features,TP_mars_build_studio_platform_install_docgen_addon_features" />
+	<target name="TP_mars_build_studio_platform" depends="TP_mars_build_studio_platform_setup_kitalpha_runtime_platform,TP_mars_build_studio_platform_install_query_legacy_features,TP_mars_build_studio_platform_install_kitalpha_features,TP_mars_build_studio_platform_install_capella_features,TP_mars_build_studio_platform_install_capella_egf_features,TP_mars_build_studio_platform_install_docgen_addon_features" />
 	<target name="TP_mars_build_studio_platform_setup_kitalpha_runtime_platform" depends="TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform,TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" />
 	<target name="TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform" depends="TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_TP_mars,TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2,TP_mars_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_nebula_rich_text" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build,TP_build_install_kitalpha_releng_TP_build" />
 	<target name="TP_win32-win32-x86_64" depends="TP_win32-win32-x86_64_build_studio_platform,TP_win32-win32-x86_64_install_studio,TP_win32-win32-x86_64_EgfStep_3,TP_win32-win32-x86_64_zip_mars_results" />
-	<target name="TP_win32-win32-x86_64_build_studio_platform" depends="TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform,TP_win32-win32-x86_64_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_64_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_64_build_studio_platform_install_capella_features,TP_win32-win32-x86_64_build_studio_platform_install_docgen_addon_features" />
+	<target name="TP_win32-win32-x86_64_build_studio_platform" depends="TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform,TP_win32-win32-x86_64_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_64_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_64_build_studio_platform_install_capella_features,TP_win32-win32-x86_64_build_studio_platform_install_capella_egf_features,TP_win32-win32-x86_64_build_studio_platform_install_docgen_addon_features" />
 	<target name="TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform" depends="TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform,TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" />
 	<target name="TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform" depends="TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_TP_win32-win32-x86_64,TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2,TP_win32-win32-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_nebula_rich_text" />
 	<target name="TP_linux-gtk-x86_64" depends="TP_linux-gtk-x86_64_build_studio_platform,TP_linux-gtk-x86_64_install_studio,TP_linux-gtk-x86_64_EgfStep_3,TP_linux-gtk-x86_64_zip_mars_results" />
-	<target name="TP_linux-gtk-x86_64_build_studio_platform" depends="TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform,TP_linux-gtk-x86_64_build_studio_platform_install_query_legacy_features,TP_linux-gtk-x86_64_build_studio_platform_install_kitalpha_features,TP_linux-gtk-x86_64_build_studio_platform_install_capella_features,TP_linux-gtk-x86_64_build_studio_platform_install_docgen_addon_features" />
+	<target name="TP_linux-gtk-x86_64_build_studio_platform" depends="TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform,TP_linux-gtk-x86_64_build_studio_platform_install_query_legacy_features,TP_linux-gtk-x86_64_build_studio_platform_install_kitalpha_features,TP_linux-gtk-x86_64_build_studio_platform_install_capella_features,TP_linux-gtk-x86_64_build_studio_platform_install_capella_egf_features,TP_linux-gtk-x86_64_build_studio_platform_install_docgen_addon_features" />
 	<target name="TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform" depends="TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform,TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" />
 	<target name="TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform" depends="TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_TP_linux-gtk-x86_64,TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2,TP_linux-gtk-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_nebula_rich_text" />
 	<target name="TP_macosx-cocoa-x86_64" depends="TP_macosx-cocoa-x86_64_build_studio_platform,TP_macosx-cocoa-x86_64_install_studio,TP_macosx-cocoa-x86_64_EgfStep_3,TP_macosx-cocoa-x86_64_AntStep_4" />
-	<target name="TP_macosx-cocoa-x86_64_build_studio_platform" depends="TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform,TP_macosx-cocoa-x86_64_build_studio_platform_install_query_legacy_features,TP_macosx-cocoa-x86_64_build_studio_platform_install_kitalpha_features,TP_macosx-cocoa-x86_64_build_studio_platform_install_capella_features,TP_macosx-cocoa-x86_64_build_studio_platform_install_docgen_addon_features" />
+	<target name="TP_macosx-cocoa-x86_64_build_studio_platform" depends="TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform,TP_macosx-cocoa-x86_64_build_studio_platform_install_query_legacy_features,TP_macosx-cocoa-x86_64_build_studio_platform_install_kitalpha_features,TP_macosx-cocoa-x86_64_build_studio_platform_install_capella_features,TP_macosx-cocoa-x86_64_build_studio_platform_install_capella_egf_features,TP_macosx-cocoa-x86_64_build_studio_platform_install_docgen_addon_features" />
 	<target name="TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform" depends="TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform,TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_install_ecoretools2_for_contextual_explorer" />
 	<target name="TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform" depends="TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_eclipse,TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_cots_features,TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_sirius_features,TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_diffmerge,TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_amalgam_features,TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_ecoretools2,TP_macosx-cocoa-x86_64_build_studio_platform_setup_kitalpha_runtime_platform_setup_platform_install_nebula_rich_text" />
 	<target name="CleanStep_1" >
@@ -1298,6 +1298,44 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="TP_mars_build_studio_platform_install_capella_egf_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_mars" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${capella.egf.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.source.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_mars_build_studio_platform_install_docgen_addon_features" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -2042,6 +2080,44 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="TP_win32-win32-x86_64_build_studio_platform_install_capella_egf_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86_64" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${capella.egf.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.source.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86_64" />
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_win32-win32-x86_64_build_studio_platform_install_docgen_addon_features" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -2622,6 +2698,44 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="TP_linux-gtk-x86_64_build_studio_platform_install_capella_egf_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_linux-gtk-x86_64" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${capella.egf.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.source.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="linux" />
+                <arg value="-p2.ws" />
+                <arg value="gtk" />
+                <arg value="-p2.arch" />
+                <arg value="x86_64" />
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_linux-gtk-x86_64_build_studio_platform_install_docgen_addon_features" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -3190,6 +3304,44 @@ This file was generated by Eclipse EGF
 
                 <arg value="-i" />
                 <arg value="org.polarsys.capella.rcp.feature.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="macosx" />
+                <arg value="-p2.ws" />
+                <arg value="cocoa" />
+                <arg value="-p2.arch" />
+                <arg value="x86_64" />
+            </args>
+        </eclipse.launch>
+	</target>	
+	<target name="TP_macosx-cocoa-x86_64_build_studio_platform_install_capella_egf_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/eclipse" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="${capella.egf.repo.url}" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.core.egf.feature.source.feature.group" />                
 
 
 
